second_correct-commit

--- a/index.html
+++ b/index.html
@@ -459,67 +459,67 @@
     </section>
 </main>
   <!--Attic-->
-    <footer class="footer section">    
-        <div class="conteiner footer-conteiner">
-            <div class="box-logo">
-                <a href="" class="logo-footer">
-                    Web<span class="title-footer"> Studio</span>
-                </a>
-                    <div class="footer-text">
-                    <p class="adress">
-                        г. Киев, пр-т Леси Украинки, 26
-                    </p>
-                    <a href="mailto:info@devstudio.com" class="adress-mail">info@devstudio.com</a> 
-                    <a href="tel:+380961111111" class="adress-tel">+38 096 111 11 11</a>
-                </div>
+  <footer class="footer section no-padding">    
+    <div class="conteiner footer-conteiner">
+        <div class="box-logo">
+            <a href="" class="logo-footer">
+                Web<span class="title-footer"> Studio</span>
+            </a>
+                <div class="footer-text">
+                <p class="adress">
+                    г. Киев, пр-т Леси Украинки, 26
+                </p>
+                <a href="mailto:info@devstudio.com" class="adress-mail">info@devstudio.com</a> 
+                <a href="tel:+380961111111" class="adress-tel">+38 096 111 11 11</a>
             </div>
-                <div class="join">
-                <h2 class="join__titl">присоединяйтесь</h2>
-                <ul class="join-list list">
-                    <li class="join-list__item">
-                                    <a class="join-list__link" href aria-label="instagram" target="_blank">
-                                        <svg class="join-list__icon" width="20" height="20">
-                                            <use href="./images/sprite-socialnetwork.svg#icon-instagram"></use>
-                                        </svg>
-                                    </a>
-                    </li>
-                    <li class="join-list__item">
-                                    <a class="join-list__link" href aria-label="twitter" target="_blank">
-                                        <svg class="join-list__icon" width="20" height="20">
-                                            <use href="./images/sprite-socialnetwork.svg#icon-twitter"></use>
-                                        </svg>
-                                    </a>
-                    </li>
-                    <li class="join-list__item">
-                                    <a class="join-list__link" href aria-label="facebook" target="_blank">
-                                        <svg class="join-list__icon" width="20" height="20">
-                                            <use href="./images/sprite-socialnetwork.svg#icon-facebook"></use>
-                                        </svg>
-                                    </a>
-                    </li>
-                    <li class="join-list__item">
-                                    <a class="join-list__link" href aria-label="linkedin" target="_blank">
-                                        <svg class="join-list__icon" width="20" height="20">
-                                            <use href="./images/sprite-socialnetwork.svg#icon-linkedin"></use>
-                                        </svg>
-                                    </a>
-                    </li>
-                </ul>
-            </div>      
-            <div class="mailing-form">
-                <h2 class="mailing-titl">Подпишитесь на рассылку</h2>
-                <Form class="subscriber-form" autocomplete="off">
-                    <label for="user_email" class="form-hidden">E-mail</label>
-                        <input class="subscriber-email"type="email" name="email" id="user_email" placeholder="E-mail"/>
-                        <button type="submit" class="subscriber-btn">Подписаться
-                            <svg class="send-icon" width="24" height="24">
-                                <use href="./images/sprite-modal-icon.svg#icon-icon-send-1"></use>
-                            </svg>
-                        </button>                      
-                </Form>
-            </div>
-        </div>        
-    </footer>
+        </div>
+            <div class="conteiner join">
+            <h2 class="join__titl">присоединяйтесь</h2>
+            <ul class="join-list list">
+                <li class="join-list__item">
+                                <a class="join-list__link" href aria-label="instagram" target="_blank">
+                                    <svg class="join-list__icon" width="20" height="20">
+                                        <use href="./images/sprite-socialnetwork.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                </li>
+                <li class="join-list__item">
+                                <a class="join-list__link" href aria-label="twitter" target="_blank">
+                                    <svg class="join-list__icon" width="20" height="20">
+                                        <use href="./images/sprite-socialnetwork.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                </li>
+                <li class="join-list__item">
+                                <a class="join-list__link" href aria-label="facebook" target="_blank">
+                                    <svg class="join-list__icon" width="20" height="20">
+                                        <use href="./images/sprite-socialnetwork.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                </li>
+                <li class="join-list__item">
+                                <a class="join-list__link" href aria-label="linkedin" target="_blank">
+                                    <svg class="join-list__icon" width="20" height="20">
+                                        <use href="./images/sprite-socialnetwork.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                </li>
+            </ul>
+        </div>      
+        <div class="mailing-form">
+            <h2 class="mailing-titl">Подпишитесь на рассылку</h2>
+            <Form class="subscriber-form" autocomplete="off">
+                <label for="user_email" class="form-hidden">E-mail</label>
+                    <input class="subscriber-email" type="email" name="email" id="user_email" placeholder="E-mail"/>
+                    <button type="submit" class="subscriber-btn">Подписаться
+                        <svg class="send-icon" width="24" height="24">
+                            <use href="./images/sprite-modal-icon.svg#icon-icon-send-1"></use>
+                        </svg>
+                    </button>                      
+            </Form>
+        </div>
+    </div>        
+</footer>
     <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
   </body>
